Fixed nav alignment with width

--- a/src/Components/AuthForm/authForm.css
+++ b/src/Components/AuthForm/authForm.css
@@ -60,7 +60,6 @@ h2 {
     align-items: center;
     gap: 15px;
     position: relative;
-    left: 4px
 }
 
 .formButtons {
