--- a/src/Components/Navigation/navigation.css
+++ b/src/Components/Navigation/navigation.css
@@ -11,10 +11,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    text-align: left;
     margin-right: auto;
     padding-left: 40px;
-    width: auto;
+    width: 100px;
     height: 100%;
     color: white;
     font-size: 35px;
